# kvcache-chatbot-lite

./: .gitattributes  .gitignore  Makefile  README.md  package.json  pyproject.toml  start.sh  start_backend.sh  start_frontend.sh  stop.sh
docs/: ARCHITECTURE.md  CACHE_MECHANISM.md  DOCUMENT_AND_RAG.md  GETTING_STARTED.md  LOCAL_REMOTE_MODELS.md  QUICK_START.md
scripts/: clean_blank_lines.py
src/api/: .env.example  config.py  env.example.yaml  main.py  models.py  requirements.txt
src/api/routers/: chat.py  document.py  logs.py  model.py  session.py  upload.py
src/api/services/: document_manager.py  document_service.py  llm_service.py  model.py  model_log.py  rag_service.py  session_service.py  tokenizer.py  tokenizer_manager.py
src/api/test/: chunk_pdf.py
src/web/: app.py  requirements.txt
testcases/docs/: david_and_goliath.txt  good_samaritan.txt  prodigal_son.txt  prodigal_son_EN.txt
