[project]
name = "kvcache-chatbot"
version = "1.0.0"
description = "KVCache Chatbot - FastAPI + Gradio application"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "openai>=1.54.0",
    "gradio>=4.44.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
